# mloda-registry

./: .dockerignore  .gitignore  .releaserc.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml  tox.ini  uv.toml
mloda/community/: pyproject.toml
mloda/community/compute_frameworks/example/: community_example_compute_framework.py  manifest.py  pyproject.toml
mloda/community/compute_frameworks/example/tests/: __init__.py  test_community_example_compute_framework.py
mloda/community/extenders/example/: community_example_extender.py  manifest.py  pyproject.toml
mloda/community/extenders/example/tests/: __init__.py  test_community_example_extender.py
mloda/community/feature_groups/data_operations/: README.md  __init__.py  aggregate_helpers.py  aggregation_base.py  arithmetic_base.py  backend_agg_tables.py  base.py  capability_hook.py  catalog.py  duckdb_agg_constants.py  duckdb_arithmetic_mixin.py  duckdb_helpers.py  duckdb_numeric_source.py  errors.py  helper_columns.py  manifest_utils.py  mask_utils.py  numeric_source.py  pandas_arithmetic_mixin.py  pandas_helpers.py  polars_agg_constants.py  polars_arithmetic_mixin.py  polars_helpers.py  polars_mode_helpers.py  polars_numeric_source.py  pyarrow_agg_constants.py  pyarrow_aggregation_helpers.py  pyarrow_arithmetic_mixin.py  pyarrow_numeric_source.py  pyproject.toml  reserved_columns.py  sqlite_agg_constants.py  sqlite_arithmetic_mixin.py
mloda/community/feature_groups/data_operations/aggregation/: base.py  duckdb_aggregation.py  manifest.py  pandas_aggregation.py  polars_lazy_aggregation.py  pyarrow_aggregation.py  pyproject.toml  sqlite_aggregation.py
mloda/community/feature_groups/data_operations/aggregation/tests/: conftest.py  test_base.py  test_duckdb.py  test_helper_column_collision.py  test_integration.py  test_mode_no_map_batches.py  test_null_consistency.py  test_pandas.py  test_polars_lazy.py  test_pyarrow.py  test_security.py  test_sqlite.py
mloda/community/feature_groups/data_operations/arithmetic/: duckdb_mixin.py  pandas_mixin.py  polars_mixin.py  pyarrow_mixin.py  sqlite_mixin.py  sqlite_numeric_source.py
mloda/community/feature_groups/data_operations/group_aggregation/: base.py  duckdb_group_aggregation.py  pandas_group_aggregation.py  polars_lazy_group_aggregation.py  pyarrow_group_aggregation.py  pyproject.toml  sqlite_group_aggregation.py
mloda/community/feature_groups/data_operations/group_aggregation/tests/: conftest.py  test_base.py  test_duckdb.py  test_integration.py  test_null_consistency.py  test_pandas.py  test_polars_lazy.py  (+3 more)
mloda/community/feature_groups/data_operations/row_changing/: __init__.py
mloda/community/feature_groups/data_operations/row_preserving/: __init__.py
mloda/community/feature_groups/data_operations/string/: base.py  duckdb_string.py  manifest.py  pandas_string.py  polars_lazy_string.py  pyarrow_string.py  pyproject.toml  sqlite_string.py
mloda/community/feature_groups/data_operations/tests/: test_arithmetic_base.py  test_capability_hook.py  test_capability_hook_unification.py  test_catalog.py  test_duckdb_helpers.py  test_errors.py  test_framework_support_matrix.py  test_helper_columns.py  test_known_divergences.py  test_mask_utils.py  test_numeric_source.py  test_op_token_guard.py  test_pandas_helpers.py  test_polars_mode_helpers.py  test_prefix_pattern_collisions.py  test_reserved_columns.py  test_reserved_columns_integration.py  test_return_data_type_rule_invariants.py  test_twin_catalog_consistency.py  test_unsupported_type_messages.py
mloda/community/feature_groups/example/: README.md  community_example_feature_group.py  manifest.py  pyproject.toml
mloda/community/feature_groups/example/example_a/: manifest.py  pyproject.toml
mloda/community/feature_groups/example/example_b/: manifest.py  pyproject.toml
mloda/community/feature_groups/example/tests/: __init__.py
(+497 files in other folders)
