[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mloda-registry"
version = "0.2.0"
description = "Registry for mloda"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "mloda",
]
authors = [
    { name = "Tom Kaltofen", email = "info@mloda.ai" }
]

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]

[tool.ruff]
line-length = 120

[tool.bandit]
exclude_dirs = [
    "venv",
    ".venv",
    "migrations",
    "__pycache__",
    "build",
    "dist",
    ".devcontainer",
    ".tox",
    ".vscode",
    "attribution",
    "*.egg-info",
    "site-packages"
]
skips = [
    "B101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "B104"  # Possible binding to all interfaces detected.
]
