[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mloda-registry-workspace"
version = "0.2.0"
description = "Development workspace for mloda registry packages"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "mloda==0.4.2",
]
authors = [
    { name = "Tom Kaltofen", email = "info@mloda.ai" }
]

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["mloda*"]
namespaces = true

[tool.uv.workspace]
members = [
    "mloda/registry",
    "mloda/testing",
    "mloda/community",
    "mloda/enterprise",
    "mloda/community/feature_groups/*",
    "mloda/enterprise/feature_groups/*",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mloda/**/tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [
    "venv",
    ".venv",
    "migrations",
    "__pycache__",
    "build",
    "dist",
    ".devcontainer",
    ".tox",
    ".vscode",
    "attribution",
    "*.egg-info",
    "site-packages"
]
skips = [
    "B101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "B104"  # Possible binding to all interfaces detected.
]
