[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mloda-community-example"
version = "0.2.0"
description = "Example community FeatureGroup plugin for mloda"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Kaltofen", email = "info@mloda.ai" }]
dependencies = ["mloda>=0.4.2"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["mloda-testing", "pytest"]

[project.urls]
Homepage = "https://mloda.ai"
Repository = "https://github.com/mloda-ai/mloda-registry"

[tool.setuptools.packages.find]
where = ["../../../.."]
include = ["mloda.community.feature_groups.example", "mloda.community.feature_groups.example.*"]
namespaces = true
